--- a/jardim/src/app/globals.css
+++ b/jardim/src/app/globals.css
@@ -6,7 +6,7 @@
 /* Titulos */
 
 .TituloCentro{
-  background-color: brown;
+  color: white;
   display: flex;
   align-items: center;  
   justify-content: center;
@@ -15,8 +15,7 @@
 .Titulo{
   display: flex;
   align-items: center;
-  background-color: blue;
-  justify-content: flex-start;
+  justify-content: center;
   width: 70%;
   margin: 20px;
 }
@@ -38,21 +37,24 @@ body, ul, li, p{
   font-family: Arial, Helvetica, sans-serif;  
 }
 
+/* HEADER */
 
 .header{
-  background-color: aqua;
   display: flex;
-  justify-content: space-around;  
+  justify-content: center;
+  align-items: center;
   padding-top: 20px;
-  height: 5vh;
+  height: 9vh;
 }
 
 .menu{
   display: flex;
+  justify-content: flex-end;
 }
 
 .menu li{
   margin-left: 10px;
+  font-size: 22px;
 }
 
 a{
@@ -66,32 +68,53 @@ a{
 }
 
 .menuBar{
-  background-color: red;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  width: 50%;
+  width: 70%;
   border-radius: 50px;
+  font-size: 40px;
+  border: 1px solid #0b6cad;
+  position: fixed;
 }
+
+.home .header .IconNome{
+  width: 30%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.home .header .IconNome a{
+  padding-left: 20px;  
+}
+
+
+
+/* HEADER */
+
+
 
 /* Inicio */
 
 .inicio{
-  background-color: red;
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-top: 30px;
-  height: 70vh;
+  margin-top: 200px;
+  height: 50vh;
 }
 
 .TituloInicio{
-  background-color: aqua;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  color: white;
+}
+
+.Titulo{
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .TituloInicio h1{
@@ -105,19 +128,42 @@ a{
   font-size: 50px;
 }
 
+.IconsTitulo{
+  display: flex;
+  justify-content: space-around;
+  width: 25%;
+  font-size: 35px;
+}
+
+.IconTitulo{
+  background-color: #0b6cad;
+  width: 25%;
+  height: 110%;
+  border-radius: 5px;
+}
+
 /* Sobre */
 
 .Sobre{
-  background-color: rebeccapurple;
   display: flex;
   justify-content: center;
+  color: white;
+}
+
+.Sobre .ImagemSobre{
+  margin-right: 40px;
 }
 
 .Sobre .AreaSobre{
   width: 50%;
-  background-color: aqua;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+
+.Sobre .AreaSobre h3{
+  margin: 0;
+  margin-bottom: 15px;
+
 }
