--- a/jardim/src/app/globals.css
+++ b/jardim/src/app/globals.css
@@ -7,7 +7,7 @@ html {
 }
 
 :root{
-  --primary-color:#122c14;
+  --primary-color:#08eb1b;
   --secundary-color: #177527;
   --text-color: #b8e6b3;
   --fundo-header-color: #234120;
